--- a/binaryIV/binaryIV_autobound.ipynb
+++ b/binaryIV/binaryIV_autobound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "edfbb4f5",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "dcd4d4c0",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b54e2220",
    "metadata": {},
    "outputs": [
@@ -268,6 +268,169 @@
    "source": [
     "print('Avg bounds width:', df_results['autobound_bound_width'].mean())\n",
     "print('# invalid:', df_results[df_results['autobound_bounds_valid'] == False].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a0cc7e9",
+   "metadata": {},
+   "source": [
+    "Autobound Claims to have tightestest bounds:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "43cdd064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpg_zhb2sc.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpgp4tmvar.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp_7gfnndi.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp_7gfnndi.pyomo.lp'...\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "114 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpgp4tmvar.glpk.glp'...\n",
+      "114 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 16 columns, 56 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  4.920e-01  max|aij| =  1.000e+00  ratio =  2.033e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 7\n",
+      "      0: obj =   1.405159721e-02 inf =   9.202e-01 (3)\n",
+      "      4: obj =  -6.549836758e-01 inf =   9.541e-17 (0)\n",
+      "*     7: obj =   1.093719992e-01 inf =   9.541e-17 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.0 Mb (43995 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpg_zhb2sc.glpk.raw'...\n",
+      "36 lines were written\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmprztfzapd.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp6vzn5r15.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmplspmt5bu.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmplspmt5bu.pyomo.lp'...\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "114 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp6vzn5r15.glpk.glp'...\n",
+      "114 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 16 columns, 56 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  4.920e-01  max|aij| =  1.000e+00  ratio =  2.033e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 7\n",
+      "      0: obj =   1.405159721e-02 inf =   9.202e-01 (3)\n",
+      "      4: obj =  -6.549836758e-01 inf =   9.541e-17 (0)\n",
+      "*     5: obj =  -6.631137571e-01 inf =   1.180e-16 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.0 Mb (43995 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmprztfzapd.glpk.raw'...\n",
+      "36 lines were written\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp_wotq00r.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpu_x9gq_g.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpdj_n781c.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpdj_n781c.pyomo.lp'...\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "114 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpu_x9gq_g.glpk.glp'...\n",
+      "114 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 16 columns, 56 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  4.920e-01  max|aij| =  1.000e+00  ratio =  2.033e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 7\n",
+      "      0: obj =   1.405159721e-02 inf =   9.202e-01 (3)\n",
+      "      4: obj =  -6.549836758e-01 inf =   9.541e-17 (0)\n",
+      "*     7: obj =   1.093719992e-01 inf =   9.541e-17 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.0 Mb (43995 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp_wotq00r.glpk.raw'...\n",
+      "36 lines were written\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpzfebygea.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpoiwtiv3x.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpstytv47h.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpstytv47h.pyomo.lp'...\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "114 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpoiwtiv3x.glpk.glp'...\n",
+      "114 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 17 columns, 57 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 16 columns, 56 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  4.920e-01  max|aij| =  1.000e+00  ratio =  2.033e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 7\n",
+      "      0: obj =   1.405159721e-02 inf =   9.202e-01 (3)\n",
+      "      4: obj =  -6.549836758e-01 inf =   9.541e-17 (0)\n",
+      "*     5: obj =  -6.631137571e-01 inf =   1.180e-16 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.0 Mb (43995 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpzfebygea.glpk.raw'...\n",
+      "36 lines were written\n",
+      "Lower Bound: -0.663113757121823\n",
+      "Upper Bound: 0.109371999231803\n",
+      "True ATE: -0.5699191914822902\n"
+     ]
+    }
+   ],
+   "source": [
+    "causaloptim_tighter = data.iloc[1]\n",
+    "# autobound_bound_lower     -0.663114\n",
+    "# autobound_bound_upper      0.109372\n",
+    "# autobound_bound_width      0.772486\n",
+    "# causaloptim_bound_lower   -0.663114\n",
+    "# causaloptim_bound_upper   -0.014916\n",
+    "# causaloptim_bound_width    0.648198\n",
+    "\n",
+    "\n",
+    "# Minimal working example\n",
+    "sim = causaloptim_tighter\n",
+    "df = pd.DataFrame({'X': sim['X'], 'Y': sim['Y'], 'Z': sim['Z']})\n",
+    "joint_probs = compute_joint_probabilities(df)\n",
+    "\n",
+    "dag = DAG()\n",
+    "dag.from_structure(\"Z -> X, X -> Y, U -> X, U -> Y\", unob = \"U\")\n",
+    "\n",
+    "problem = causalProblem(dag)\n",
+    "problem.load_data_pandas(joint_probs)\n",
+    "problem.add_prob_constraints()\n",
+    "problem.set_ate(ind='X', dep='Y')\n",
+    "\n",
+    "program = problem.write_program()\n",
+    "lb, ub = program.run_pyomo(solver_name='glpk', verbose=True)\n",
+    "\n",
+    "print(\"Lower Bound:\", lb)\n",
+    "print(\"Upper Bound:\", ub)\n",
+    "print(\"True ATE:\", sim['ATE_true'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
