--- a/binaryIV/binaryIV_causaloptim.ipynb
+++ b/binaryIV/binaryIV_causaloptim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9ff11d44",
    "metadata": {},
    "outputs": [],
@@ -868,6 +868,194 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3a0c0fc",
+   "metadata": {},
+   "source": [
+    "### Why is causaloptim sometimes wrong?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6cfa9995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_pickle('binaryIV_results.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c3d403d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['seed',\n",
+       " 'intercept_X',\n",
+       " 'intercept_Y',\n",
+       " 'b_X_Y',\n",
+       " 'b_Z',\n",
+       " 'b_U_X',\n",
+       " 'b_U_Y',\n",
+       " 'ATE_true',\n",
+       " 'p_Y1',\n",
+       " 'p_Y0',\n",
+       " 'Z',\n",
+       " 'U',\n",
+       " 'X',\n",
+       " 'Y',\n",
+       " 'entropy_Y',\n",
+       " 'entropy_X',\n",
+       " 'entropy_Z',\n",
+       " 'entropy_U',\n",
+       " 'corr_X_Y',\n",
+       " 'corr_X_Z',\n",
+       " 'corr_Y_Z',\n",
+       " 'causaloptim_bound_lower',\n",
+       " 'causaloptim_bound_upper',\n",
+       " 'causaloptim_bound_width',\n",
+       " 'causaloptim_bounds_valid',\n",
+       " '2SLS_CI_level_percent',\n",
+       " '2SLS_estimation',\n",
+       " '2SLS_CI_lower',\n",
+       " '2SLS_CI_upper',\n",
+       " '2SLS_CI_width',\n",
+       " '2SLS_CI_valid',\n",
+       " 'entropyBounds_H(conf)_UB',\n",
+       " 'entropyBounds_bound_lower',\n",
+       " 'entropyBounds_bound_upper',\n",
+       " 'entropyBounds_bound_width',\n",
+       " 'entropyBounds_bounds_valid',\n",
+       " 'autobound_bound_lower',\n",
+       " 'autobound_bound_upper',\n",
+       " 'autobound_bound_width',\n",
+       " 'autobound_bounds_valid']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['causaloptim_bounds_valid'] == False]\n",
+    "list(data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b91676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               OLS Regression Results                              \n",
+      "===================================================================================\n",
+      "Dep. Variable:     causaloptim_bound_width   R-squared:                       0.428\n",
+      "Model:                                 OLS   Adj. R-squared:                  0.381\n",
+      "Method:                      Least Squares   F-statistic:                     8.986\n",
+      "Date:                     Sat, 03 May 2025   Prob (F-statistic):           3.96e-09\n",
+      "Time:                             13:35:41   Log-Likelihood:                 45.898\n",
+      "No. Observations:                      105   AIC:                            -73.80\n",
+      "Df Residuals:                           96   BIC:                            -49.91\n",
+      "Df Model:                                8                                         \n",
+      "Covariance Type:                 nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        -13.3935     11.071     -1.210      0.229     -35.368       8.581\n",
+      "b_X_Y         -0.0053      0.006     -0.926      0.357      -0.017       0.006\n",
+      "b_Z            0.0671      0.017      3.914      0.000       0.033       0.101\n",
+      "b_U_X          0.0522      0.017      3.056      0.003       0.018       0.086\n",
+      "b_U_Y         -0.0259      0.017     -1.539      0.127      -0.059       0.008\n",
+      "entropy_X     -0.7066      0.333     -2.123      0.036      -1.367      -0.046\n",
+      "entropy_U      0.5671      9.076      0.062      0.950     -17.448      18.582\n",
+      "entropy_Y      1.6213      0.204      7.935      0.000       1.216       2.027\n",
+      "entropy_Z     19.0590     14.029      1.358      0.177      -8.789      46.907\n",
+      "==============================================================================\n",
+      "Omnibus:                        6.516   Durbin-Watson:                   1.706\n",
+      "Prob(Omnibus):                  0.038   Jarque-Bera (JB):                7.261\n",
+      "Skew:                          -0.365   Prob(JB):                       0.0265\n",
+      "Kurtosis:                       4.061   Cond. No.                     3.09e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 3.09e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter the invalid cases\n",
+    "invalid_data = data[data['causaloptim_bounds_valid'] == False]\n",
+    "\n",
+    "# Sample 40 valid cases\n",
+    "valid_sample = data[data['causaloptim_bounds_valid'] == True].sample(n=40, random_state=42)\n",
+    "\n",
+    "# Combine invalid cases with the sampled valid cases\n",
+    "combined_data = pd.concat([invalid_data, valid_sample])\n",
+    "\n",
+    "# Select the features for regression\n",
+    "features = [\n",
+    "    'b_X_Y', 'b_Z', 'b_U_X', 'b_U_Y',\n",
+    "    'entropy_X', 'entropy_U'\n",
+    "]\n",
+    "\n",
+    "# Prepare the data for regression\n",
+    "X = combined_data[features]\n",
+    "y = combined_data['causaloptim_bounds_valid'].astype(int)  # Use bounds validity as the target variable\n",
+    "\n",
+    "# Add a constant for the intercept\n",
+    "import statsmodels.api as sm\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Fit a logistic regression model\n",
+    "logit_model = sm.Logit(y, X).fit()\n",
+    "\n",
+    "# Display the summary of the regression\n",
+    "print(logit_model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b04a10c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  feature          VIF\n",
+      "0   const   155.892131\n",
+      "1   b_X_Y  1644.499095\n",
+      "2     b_Z  1373.218894\n",
+      "3   b_U_X   419.490027\n",
+      "4   b_U_Y  1108.519285\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "\n",
+    "# Calculate VIF for each feature\n",
+    "vif_data = pd.DataFrame()\n",
+    "vif_data['feature'] = X.columns\n",
+    "vif_data['VIF'] = [variance_inflation_factor(X.values, i) for i in range(X.shape[1])]\n",
+    "\n",
+    "# Output the VIF values\n",
+    "print(vif_data)"
    ]
   }
  ],
