struggling with uai format

--- a/binaryIV/binaryIV.ipynb
+++ b/binaryIV/binaryIV.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ded5b653",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['seed', 'intercept_X', 'intercept_Y', 'b_X_Y', 'b_Z', 'b_U_X', 'b_U_Y', 'ATE_true', 'p_Y1', 'p_Y0', 'Z', 'U', 'X', 'Y', 'entropy_Y', 'entropy_X', 'entropy_Z', 'entropy_U', 'corr_X_Y', 'corr_X_Z', 'corr_Y_Z', 'causaloptim_bound_lower', 'causaloptim_bound_upper', 'causaloptim_bound_width', 'causaloptim_bounds_valid', '2SLS_CI_level_percent', '2SLS_estimation', '2SLS_CI_lower', '2SLS_CI_upper', '2SLS_CI_width', '2SLS_CI_valid', 'entropyBounds_H(conf)_UB', 'entropyBounds_bound_lower', 'entropyBounds_bound_upper', 'entropyBounds_bound_width', 'entropyBounds_bounds_valid', 'autobound_bound_lower', 'autobound_bound_upper', 'autobound_bound_width', 'autobound_bounds_valid', 'ATE_true_smooth', 'autobound_bound_lower_smooth', 'autobound_bound_upper_smooth']\n"
+      "['seed', 'intercept_X', 'intercept_Y', 'b_X_Y', 'b_Z', 'b_U_X', 'b_U_Y', 'ATE_true', 'p_Y1', 'p_Y0', 'Z', 'U', 'X', 'Y', 'entropy_Y', 'entropy_X', 'entropy_Z', 'entropy_U', 'corr_X_Y', 'corr_X_Z', 'corr_Y_Z', 'causaloptim_bound_lower', 'causaloptim_bound_upper', 'causaloptim_bound_width', 'causaloptim_bounds_valid', '2SLS_CI_level_percent', '2SLS_estimation', '2SLS_CI_lower', '2SLS_CI_upper', '2SLS_CI_width', '2SLS_CI_valid', 'entropyBounds_H(conf)_UB', 'entropyBounds_bound_lower', 'entropyBounds_bound_upper', 'entropyBounds_bound_width', 'entropyBounds_bounds_valid', 'autobound_bound_lower', 'autobound_bound_upper', 'autobound_bound_width', 'autobound_bounds_valid']\n"
      ]
     }
    ],
@@ -97,8 +97,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "f94d9944",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "seed                                                                     226265\n",
+       "intercept_X                                                                   0\n",
+       "intercept_Y                                                                   0\n",
+       "b_X_Y                                                                      -5.0\n",
+       "b_Z                                                                   -0.048032\n",
+       "b_U_X                                                                   0.77376\n",
+       "b_U_Y                                                                  1.621096\n",
+       "ATE_true                                                              -0.649498\n",
+       "p_Y1                          [0.032961324273622784, 0.032961324273622784, 0...\n",
+       "p_Y0                          [0.8349462801960579, 0.8349462801960579, 0.834...\n",
+       "Z                             [0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...\n",
+       "U                             [1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, ...\n",
+       "X                             [1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, ...\n",
+       "Y                             [0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, ...\n",
+       "entropy_Y                                                              0.610864\n",
+       "entropy_X                                                              0.688909\n",
+       "entropy_Z                                                              0.693115\n",
+       "entropy_U                                                              0.693075\n",
+       "corr_X_Y                                                              -0.656565\n",
+       "corr_X_Z                                                               0.019347\n",
+       "corr_Y_Z                                                              -0.031424\n",
+       "causaloptim_bound_lower                                               -0.809524\n",
+       "causaloptim_bound_upper                                                0.157898\n",
+       "causaloptim_bound_width                                                0.967422\n",
+       "causaloptim_bounds_valid                                                   True\n",
+       "2SLS_CI_level_percent                                                      98.0\n",
+       "2SLS_estimation                                                       -1.495017\n",
+       "2SLS_CI_lower                                                              -1.0\n",
+       "2SLS_CI_upper                                                               1.0\n",
+       "2SLS_CI_width                                                               2.0\n",
+       "2SLS_CI_valid                                                              True\n",
+       "entropyBounds_H(conf)_UB                                                    1.0\n",
+       "entropyBounds_bound_lower                                             -0.758991\n",
+       "entropyBounds_bound_upper                                              0.240991\n",
+       "entropyBounds_bound_width                                              0.999983\n",
+       "entropyBounds_bounds_valid                                                 True\n",
+       "autobound_bound_lower                                                 -0.809524\n",
+       "autobound_bound_upper                                                  0.156682\n",
+       "autobound_bound_width                                                  0.966206\n",
+       "autobound_bounds_valid                                                     True\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "b5f2f114",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'binary_iv_model.uai'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "X = data.iloc[0]['X']\n",
+    "Y = data.iloc[0]['Y']\n",
+    "Z = data.iloc[0]['Z']\n",
+    "\n",
+    "N = len(X)\n",
+    "\n",
+    "# Estimate empirical distributions\n",
+    "pz = np.bincount(Z, minlength=2) / N\n",
+    "\n",
+    "# P(X | Z)\n",
+    "pxz_counts = Counter((z, x) for z, x in zip(Z, X))\n",
+    "px_given_z = np.array([\n",
+    "    [pxz_counts[(z, x)] for x in [0, 1]] for z in [0, 1]\n",
+    "], dtype=float)\n",
+    "px_given_z /= px_given_z.sum(axis=1, keepdims=True)\n",
+    "\n",
+    "# P(Y | X)\n",
+    "pyx_counts = Counter((x, y) for x, y in zip(X, Y))\n",
+    "py_given_x = np.array([\n",
+    "    [pyx_counts[(x, y)] for y in [0, 1]] for x in [0, 1]\n",
+    "], dtype=float)\n",
+    "py_given_x /= py_given_x.sum(axis=1, keepdims=True)\n",
+    "\n",
+    "# Create UAI file content\n",
+    "lines = []\n",
+    "\n",
+    "# Header\n",
+    "lines.append(\"CAUSAL\")\n",
+    "lines.append(\"3\")  # number of variables: Z, X, Y\n",
+    "lines.append(\"2 2 2\")  # cardinalities\n",
+    "\n",
+    "# Factors: P(Z), P(X|Z), P(Y|X)\n",
+    "lines.append(\"3\")  # number of factors\n",
+    "lines.append(\"1 0\")       # P(Z)\n",
+    "lines.append(\"2 1 0\")     # P(X | Z)\n",
+    "lines.append(\"2 2 1\")     # P(Y | X)\n",
+    "\n",
+    "# Factor sizes\n",
+    "lines.append(\"2\")  # P(Z)\n",
+    "lines.append(\"4\")  # P(X|Z): 2 Z values * 2 X values\n",
+    "lines.append(\"4\")  # P(Y|X): 2 X values * 2 Y values\n",
+    "\n",
+    "# Factor tables\n",
+    "lines.append(\" \".join(f\"{p:.5f}\" for p in pz))  # P(Z)\n",
+    "\n",
+    "# P(X | Z)\n",
+    "lines.append(\" \".join(f\"{p:.5f}\" for p in px_given_z.flatten()))\n",
+    "\n",
+    "# P(Y | X)\n",
+    "lines.append(\" \".join(f\"{p:.5f}\" for p in py_given_x.flatten()))\n",
+    "\n",
+    "# Save to file\n",
+    "uai_content = \"\\n\".join(lines)\n",
+    "file_path = \"binary_iv_model.uai\"\n",
+    "with open(file_path, \"w\") as f:\n",
+    "    f.write(uai_content)\n",
+    "\n",
+    "file_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9ebba75",
    "metadata": {},
    "outputs": [],
    "source": []
