generate UAI file

--- a/binaryIV/binaryIV.ipynb
+++ b/binaryIV/binaryIV.ipynb
@@ -97,63 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "f94d9944",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "seed                                                                     226265\n",
-       "intercept_X                                                                   0\n",
-       "intercept_Y                                                                   0\n",
-       "b_X_Y                                                                      -5.0\n",
-       "b_Z                                                                   -0.048032\n",
-       "b_U_X                                                                   0.77376\n",
-       "b_U_Y                                                                  1.621096\n",
-       "ATE_true                                                              -0.649498\n",
-       "p_Y1                          [0.032961324273622784, 0.032961324273622784, 0...\n",
-       "p_Y0                          [0.8349462801960579, 0.8349462801960579, 0.834...\n",
-       "Z                             [0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...\n",
-       "U                             [1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, ...\n",
-       "X                             [1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, ...\n",
-       "Y                             [0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, ...\n",
-       "entropy_Y                                                              0.610864\n",
-       "entropy_X                                                              0.688909\n",
-       "entropy_Z                                                              0.693115\n",
-       "entropy_U                                                              0.693075\n",
-       "corr_X_Y                                                              -0.656565\n",
-       "corr_X_Z                                                               0.019347\n",
-       "corr_Y_Z                                                              -0.031424\n",
-       "causaloptim_bound_lower                                               -0.809524\n",
-       "causaloptim_bound_upper                                                0.157898\n",
-       "causaloptim_bound_width                                                0.967422\n",
-       "causaloptim_bounds_valid                                                   True\n",
-       "2SLS_CI_level_percent                                                      98.0\n",
-       "2SLS_estimation                                                       -1.495017\n",
-       "2SLS_CI_lower                                                              -1.0\n",
-       "2SLS_CI_upper                                                               1.0\n",
-       "2SLS_CI_width                                                               2.0\n",
-       "2SLS_CI_valid                                                              True\n",
-       "entropyBounds_H(conf)_UB                                                    1.0\n",
-       "entropyBounds_bound_lower                                             -0.758991\n",
-       "entropyBounds_bound_upper                                              0.240991\n",
-       "entropyBounds_bound_width                                              0.999983\n",
-       "entropyBounds_bounds_valid                                                 True\n",
-       "autobound_bound_lower                                                 -0.809524\n",
-       "autobound_bound_upper                                                  0.156682\n",
-       "autobound_bound_width                                                  0.966206\n",
-       "autobound_bounds_valid                                                     True\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.344241\n",
+      "-3.500000\n"
+     ]
     }
    ],
    "source": [
-    "data.iloc[0]"
+    "sim = data.iloc[300]\n",
+    "\n",
+    "X = sim['X']\n",
+    "Y = sim['Y']\n",
+    "Z = sim['Z']\n",
+    "# Create a DataFrame from the arrays\n",
+    "df = pd.DataFrame({'X': X, 'Y': Y})\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "csv_file_path = \"data300_idx_noZ.csv\"\n",
+    "df.to_csv(csv_file_path, index=True)\n",
+    "\n",
+    "# csv_file_path\n",
+    "print(f\"{sim['ATE_true']:.6f}\")\n",
+    "print(f\"{sim['b_X_Y']:.6f}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
