generating data for zaffalon

--- a/binaryIV/binaryIV.ipynb
+++ b/binaryIV/binaryIV.ipynb
@@ -97,37 +97,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "f94d9944",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.344241\n",
-      "-3.500000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sim = data.iloc[300]\n",
+    "data_for_zaffalon = pd.DataFrame()\n",
+    "for i in range(0, 100):\n",
+    "    sim = data.iloc[i]\n",
     "\n",
-    "X = sim['X']\n",
-    "Y = sim['Y']\n",
-    "Z = sim['Z']\n",
-    "# Create a DataFrame from the arrays\n",
-    "df = pd.DataFrame({'X': X, 'Y': Y})\n",
+    "    X = sim['X']\n",
+    "    Y = sim['Y']\n",
+    "    Z = sim['Z']\n",
+    "    b_X_Y_1000 = (round(sim['b_X_Y'], 3) * 1000).astype(int) #primary key of simulation\n",
+    "    # Create a DataFrame from the arrays\n",
+    "    df = pd.DataFrame({'Z': Z, 'X': X, 'Y': Y, 'b_X_Y_1000': b_X_Y_1000})\n",
     "\n",
-    "# Save the DataFrame to a CSV file\n",
-    "csv_file_path = \"data300_idx_noZ.csv\"\n",
-    "df.to_csv(csv_file_path, index=True)\n",
+    "    # concat the dataframes\n",
+    "    data_for_zaffalon = pd.concat([data_for_zaffalon, df], ignore_index=True)\n",
     "\n",
-    "# csv_file_path\n",
-    "print(f\"{sim['ATE_true']:.6f}\")\n",
-    "print(f\"{sim['b_X_Y']:.6f}\")\n",
     "\n",
-    "\n"
+    "csv_file_path = \"data_for_zaffalon.csv\"\n",
+    "data_for_zaffalon.to_csv(csv_file_path, index=False)\n"
    ]
   },
   {
