generate data for zaffalon

--- a/binaryIV/binaryIV.ipynb
+++ b/binaryIV/binaryIV.ipynb
@@ -97,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "f94d9944",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_for_zaffalon = pd.DataFrame()\n",
-    "for i in range(0, 100):\n",
+    "for i in range(0, data.shape[0]):\n",
     "    sim = data.iloc[i]\n",
     "\n",
     "    X = sim['X']\n",
