--- a/noisy_bounds/backdoor_logistic_demo.ipynb
+++ b/noisy_bounds/backdoor_logistic_demo.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<module 'data' from '/Users/wenshuoguo/Documents/GitHub/robust-causal-code/data.py'>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'utils' from 'code' (c:\\Python312\\Lib\\code.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m utils\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimportlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m reload\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'utils' from 'code' (c:\\Python312\\Lib\\code.py)"
+     ]
     }
    ],
    "source": [
+    "import sys\n",
     "import numpy as np\n",
     "import math\n",
     "from scipy.special import expit \n",
@@ -27,7 +29,10 @@
     "import random\n",
     "import time\n",
     "\n",
-    "import utils\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "\n",
+    "from code import utils\n",
     "import data\n",
     "\n",
     "from importlib import reload\n",
@@ -257,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
