--- a/binaryIV/binaryIV_classification.ipynb
+++ b/binaryIV/binaryIV_classification.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "id": "69b5e5b8",
    "metadata": {},
    "outputs": [
@@ -369,17 +369,17 @@
    "source": [
     "\n",
     "# Train the decision tree classifier\n",
-    "clf = DecisionTreeClassifier(random_state=42)\n",
-    "clf.fit(X_train, y_train)\n",
+    "dt_clf = DecisionTreeClassifier(random_state=42)\n",
+    "dt_clf.fit(X_train, y_train)\n",
     "\n",
     "# Evaluate the classifier\n",
-    "y_pred = clf.predict(X_test)\n",
+    "y_pred = dt_clf.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "3f24a6e0",
    "metadata": {},
    "outputs": [
@@ -504,12 +504,15 @@
    "source": [
     "Idea:\n",
     "* New dataset runs through the classifier\n",
-    "* the bounds of the algorithm which the classifier identified as best is automatically returned"
+    "* the bounds of the algorithm which the classifier identified as best is automatically returned\n",
+    "\n",
+    "@TODO: \n",
+    "punish invalid bounds to bring down the invalid rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "2b91bd5b",
    "metadata": {},
    "outputs": [
@@ -521,7 +524,8 @@
       "Causaloptim Invalid Rate: 0.25%\n",
       "2SLS Invalid Rate: 0.80%\n",
       "Autobound Invalid Rate: 0.00%\n",
-      "Entropy Bounds Invalid Rate: 0.90%\n"
+      "Entropy Bounds Invalid Rate: 0.90%\n",
+      "Zaffalon Invalid Rate: 0.90%\n"
      ]
     },
     {
@@ -576,14 +580,15 @@
        "Mean Bound Width                 0.486802  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Run each datapoint through best_nn_clf and save the result in a new column\n",
-    "data['metalearner_tightest'] = best_nn_clf.predict(data[features])\n",
+    "clf = best_nn_clf\n",
+    "# Run each datapoint through clf and save the result in a new column\n",
+    "data['metalearner_tightest'] = clf.predict(data[features])\n",
     "\n",
     "# Add a column 'metalearner_bound_width' based on 'metalearner_tightest'\n",
     "data['metalearner_bound_width'] = data.apply(\n",
