--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "b019801d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -48,6 +57,13 @@
    "id": "cb3f2997",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Zaffalon bounds in parallel...\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -885,7 +901,7 @@
        "9               True            0.692578               False  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +913,7 @@
     "binaryIV.bound_ate_causaloptim()\n",
     "binaryIV.bound_ate_autobound()\n",
     "binaryIV.bound_ate_entropy(entr=0.80)\n",
-    "binaryIV.bound_ate_zaffalon()\n",
+    "binaryIV.bound_ate_zaffalon_parallel()\n",
     "binaryIV.bound_ate_manski()\n",
     "\n",
     "data"
