Run ZhangBareinboim in pulp

--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "b019801d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,6 +30,7 @@
     "from simulation_engine.scenarios.iv.base_iv import IVScenario\n",
     "from simulation_engine.util.plotting_util import PlottingUtil\n",
     "from simulation_engine.algorithms.causaloptim import Causaloptim\n",
+    "from simulation_engine.algorithms.zhang_bareinboim import ZahngBareinboim\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
@@ -557,32 +567,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ddb64b89",
+   "execution_count": 31,
+   "id": "a0d23b26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    2000.000000\n",
-       "mean        0.445951\n",
-       "std         0.167417\n",
-       "min         0.090000\n",
-       "25%         0.302000\n",
-       "50%         0.440000\n",
-       "75%         0.556000\n",
-       "max         0.950000\n",
-       "Name: X_mean, dtype: float64"
+       "numpy.ndarray"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(data.iloc[80]['X']).describe()\n",
-    "data['X_mean'].describe()"
+    "type(data.iloc[0].X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb64b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True ATE -0.023739830728857114\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'minimize_bound': 0.0537608060332043, 'maximize_bound': 0.453760806033204}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim = data.iloc[5]\n",
+    "\n",
+    "bounds = ZahngBareinboim.solve_boundssim, target_x=1)\n",
+    "print('True ATE', sim['ATE_true'])\n",
+    "bounds"
    ]
   },
   {
